2003-07-28 Tom Copeland  <tom@infoether.com>

	* www/snippet/detail.php:
	Fixed bug [ #459 ] Snippet formatting is a bit off

	* www/snippet/browse.php:
	Implemented feature[ #457 ] Snippet titles could be hyperlinked

2004-07-25  Reinhard Spisser <reinhard@spisser.it>

	* www/include/languages/Base.tab:
	Bug [455]: removed link to /docs/site


2003-07-24  Roland Mas  <99.roland.mas@aist.enst.fr>

	* www/include/languages/Dutch.tab: Dutch language update from
	Patrick Lemmens.

2003-07-21 Tom Copeland  <tom@infoether.com>

	* www/account/index.php:
	Bug [ #441 ] Missing time tracker page

2003-07-18 Christian Bayle	<bayle@debian.org>

	* Reordered and commented loadLanguage in BaseLanguage.tab
	Local customizations have now priority 

2003-07-20 Reinhard Spisser <reinhard@spisser.it>

	* Italian.tab:
		Some translations
	* www/themes/gforge/images/it_*.png:
		Corrected background problems
		
	* www/admin/index.php:
		Added dropdown to select project status (D, P, A, H)
	* www/include/languages/Base.tab,www/include/languages/Italian.tab
	Changed string admin_index groups_with to admin_index groups_with_status

2003-07-18 Christian Bayle	<bayle@debian.org>

	* Applied patch for controlleroo.php. Bug [ #443 ]

2003-07-11 Tom Copeland  <tom@infoether.com>

	* www/themes/gforge/images/:
	Patch [ #434 ] Gforge theme Spanish images; thx to Vicente Ruiz

2003-07-10 Tom Copeland  <tom@infoether.com>

	* www/stats/site_stats_utils.php, projects.php, graphs.php:
	Bug #399; project stats page works better now, removed duplicate
	graph from site graphs page.

	* www/project/admin/qrs.php:
	Bug #344: Date/Time field was not being set properly in file releases

	* www/tracker/browse.php, www/include/languages/Base.tab:
	RFE #301: number of comments in the tracker-list
	
2003-07-02 Christian Bayle	<bayle@debian.org>

	* Corrected bad colspan in www/people/people_utils.php close patch
	#482 from Paul Gibbbs (djpaul)
	
2003-07-02 Christian Bayle	<bayle@debian.org>